rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-beams__decoded.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Beam
  class: Beam
  properties:
    Attachment0: "null"
    Attachment1: "null"
    Attributes:
      Attributes: {}
    Color:
      ColorSequence:
        keypoints:
          - time: 0
            color:
              - 1
              - 1
              - 1
          - time: 0.5
            color:
              - 0
              - 0
              - 0
          - time: 1
            color:
              - 1
              - 1
              - 1
    CurveSize0:
      Float32: 0
    CurveSize1:
      Float32: 0
    Enabled:
      Bool: true
    FaceCamera:
      Bool: false
    LightEmission:
      Float32: 0
    LightInfluence:
      Float32: 1
    Segments:
      Int32: 10
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Texture:
      ContentId: ""
    TextureLength:
      Float32: 1
    TextureMode:
      Enum: 0
    TextureSpeed:
      Float32: 1
    Transparency:
      NumberSequence:
        keypoints:
          - time: 0
            value: 0.5
            envelope: 0
          - time: 1
            value: 0.5
            envelope: 0
    Width0:
      Float32: 1
    Width1:
      Float32: 1
    ZOffset:
      Float32: 0
  children: []
- referent: referent-1
  name: Beam
  class: Beam
  properties:
    Attachment0: "null"
    Attachment1: "null"
    Attributes:
      Attributes: {}
    Color:
      ColorSequence:
        keypoints:
          - time: 0
            color:
              - 1
              - 1
              - 1
          - time: 1
            color:
              - 1
              - 1
              - 1
    CurveSize0:
      Float32: 0
    CurveSize1:
      Float32: 0
    Enabled:
      Bool: false
    FaceCamera:
      Bool: false
    LightEmission:
      Float32: 0
    LightInfluence:
      Float32: 1
    Segments:
      Int32: 10
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Texture:
      ContentId: ""
    TextureLength:
      Float32: 1
    TextureMode:
      Enum: 0
    TextureSpeed:
      Float32: 1
    Transparency:
      NumberSequence:
        keypoints:
          - time: 0
            value: 0.5
            envelope: 0
          - time: 1
            value: 0.5
            envelope: 0
    Width0:
      Float32: 1
    Width1:
      Float32: 1
    ZOffset:
      Float32: 0
  children: []
- referent: referent-2
  name: Beam
  class: Beam
  properties:
    Attachment0: "null"
    Attachment1: "null"
    Attributes:
      Attributes: {}
    Color:
      ColorSequence:
        keypoints:
          - time: 0
            color:
              - 1
              - 0
              - 0
          - time: 0.5
            color:
              - 0
              - 1
              - 0
          - time: 1
            color:
              - 0
              - 0
              - 1
    CurveSize0:
      Float32: 0
    CurveSize1:
      Float32: 0
    Enabled:
      Bool: true
    FaceCamera:
      Bool: false
    LightEmission:
      Float32: 0
    LightInfluence:
      Float32: 1
    Segments:
      Int32: 10
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Texture:
      ContentId: ""
    TextureLength:
      Float32: 1
    TextureMode:
      Enum: 0
    TextureSpeed:
      Float32: 1
    Transparency:
      NumberSequence:
        keypoints:
          - time: 0
            value: 0.5
            envelope: 0
          - time: 1
            value: 0.5
            envelope: 0
    Width0:
      Float32: 1
    Width1:
      Float32: 1
    ZOffset:
      Float32: 0
  children: []
