rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-beams__input.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: text_decoded
---
num_types: 1
num_instances: 3
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: Beam
      object_format: 0
      referents:
        - 0
        - 1
        - 2
  - Prop:
      type_id: 0
      prop_name: Attachment0
      prop_type: Ref
      values:
        - -1
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Attachment1
      prop_type: Ref
      values:
        - -1
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Color
      prop_type: ColorSequence
      values:
        - keypoints:
            - time: 0
              color:
                - 1
                - 1
                - 1
            - time: 0.5
              color:
                - 0
                - 0
                - 0
            - time: 1
              color:
                - 1
                - 1
                - 1
        - keypoints:
            - time: 0
              color:
                - 1
                - 1
                - 1
            - time: 1
              color:
                - 1
                - 1
                - 1
        - keypoints:
            - time: 0
              color:
                - 1
                - 0
                - 0
            - time: 0.5
              color:
                - 0
                - 1
                - 0
            - time: 1
              color:
                - 0
                - 0
                - 1
  - Prop:
      type_id: 0
      prop_name: CurveSize0
      prop_type: Float32
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: CurveSize1
      prop_type: Float32
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: Enabled
      prop_type: Bool
      values:
        - true
        - false
        - true
  - Prop:
      type_id: 0
      prop_name: FaceCamera
      prop_type: Bool
      values:
        - false
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: LightEmission
      prop_type: Float32
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: LightInfluence
      prop_type: Float32
      values:
        - 1
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - Beam
        - Beam
        - Beam
  - Prop:
      type_id: 0
      prop_name: Segments
      prop_type: Int32
      values:
        - 10
        - 10
        - 10
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Texture
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: TextureLength
      prop_type: Float32
      values:
        - 1
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: TextureMode
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: TextureSpeed
      prop_type: Float32
      values:
        - 1
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: Transparency
      prop_type: NumberSequence
      values:
        - keypoints:
            - time: 0
              value: 0.5
              envelope: 0
            - time: 1
              value: 0.5
              envelope: 0
        - keypoints:
            - time: 0
              value: 0.5
              envelope: 0
            - time: 1
              value: 0.5
              envelope: 0
        - keypoints:
            - time: 0
              value: 0.5
              envelope: 0
            - time: 1
              value: 0.5
              envelope: 0
  - Prop:
      type_id: 0
      prop_name: Width0
      prop_type: Float32
      values:
        - 1
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: Width1
      prop_type: Float32
      values:
        - 1
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: ZOffset
      prop_type: Float32
      values:
        - 0
        - 0
        - 0
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
        - - 2
          - -1
  - End
